Curve Modifier does not update (new Dependency graph) #46354

Closed
opened 2015-10-03 12:35:38 +02:00 by Daniel · 5 comments

System Information
Operating system and graphics card
system-info.txt

Blender Version
Broken: version 2.76 (sub 0), branch b'master', commit date b'2015-09-30' b'16:05', hash b'fb78f6d', b''
Worked: With old Dependency graph.

Short description of error
Curve Modifier with animation do not update.

Exact steps for others to reproduce the error
Based on a (as simple as possible) attached .blend file with minimum amount of steps

  1. Add>Curve>Circle
  2. open the curve
  3. Add>Curve>Path
  4. with the Path selected add Modifier>Curve with the BezierCircle as Object
  5. with the Path selected in viewport hit "i" insert keyframe for location at frame "0"
  6. go to frame 50
  7. with the Path selected hit "g" than "x" and translate the Path in positive direction.
  8. with the Path selected in viewport hit "i" insert keyframe for location at frame "50"
  9. hit alt-a to play the animation

The NurbsPath should now follow the BezierCircle (old depsgraph)
with new depsgraph active the NurbsPath ignores the Curve Modifier and translate only along the x-axis

curve_modifier.blend

**System Information** Operating system and graphics card [system-info.txt](https://archive.blender.org/developer/F241888/system-info.txt) **Blender Version** Broken: version 2.76 (sub 0), branch b'master', commit date b'2015-09-30' b'16:05', hash b'fb78f6d', b'' Worked: With old Dependency graph. **Short description of error** Curve Modifier with animation do not update. **Exact steps for others to reproduce the error** Based on a (as simple as possible) attached .blend file with minimum amount of steps 1. Add>Curve>Circle 2. open the curve 3. Add>Curve>Path 4. with the Path selected add Modifier>Curve with the BezierCircle as Object 5. with the Path selected in viewport hit "i" insert keyframe for location at frame "0" 6. go to frame 50 7. with the Path selected hit "g" than "x" and translate the Path in positive direction. 8. with the Path selected in viewport hit "i" insert keyframe for location at frame "50" 9. hit alt-a to play the animation The NurbsPath should now follow the BezierCircle (old depsgraph) with new depsgraph active the NurbsPath ignores the Curve Modifier and translate only along the x-axis [curve_modifier.blend](https://archive.blender.org/developer/F241887/curve_modifier.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @D4N13L1980-1

Added subscriber: @D4N13L1980-1
Bastien Montagne changed title from Curve Modifier do not update (new Dependency graph) to Curve Modifier does not update (new Dependency graph) 2015-10-03 16:51:50 +02:00
Sergey Sharybin was assigned by Bastien Montagne 2015-10-03 16:51:50 +02:00

Added subscriber: @mont29

Added subscriber: @mont29

This issue was referenced by 776a98f3e8

This issue was referenced by 776a98f3e8813b0ad94570423410dac40c2d35e1

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46354
No description provided.