Fix T46354: Curve Modifier does not update (new Dependency graph)

Result of curve modifier depends on transform of the object which should
be reflected by the depsgraph relations.